--- a/monitor-chart/detect.html
+++ b/monitor-chart/detect.html
@@ -145,6 +145,14 @@ window.onload=function(){
   });
 
 }
+
+  try {
+        var tmp = JSON.parse(YYM.getToken())
+        alert(tmp);
+      }
+      catch (err) {
+        return ''
+   }
 </script>
 </body>
 </html>
