--- a/monitor-chart/detect.html
+++ b/monitor-chart/detect.html
@@ -144,8 +144,7 @@ window.onload=function(){
       });
   });
 
-}
-
+  alert('123123123');
   try {
         var tmp = JSON.parse(YYM.getToken())
         alert(tmp);
@@ -153,6 +152,9 @@ window.onload=function(){
       catch (err) {
         return ''
    }
+}
+
+  
 </script>
 </body>
 </html>
