--- a/monitor-chart/detect.html
+++ b/monitor-chart/detect.html
@@ -145,7 +145,7 @@ window.onload=function(){
   });
 
   alert('123123123');
-  if (typeof(YYM) == 'underfined') {
+  if (typeof YYM == 'underfined') {
      alert('underfined');
   }
   try {
