--- a/monitor-chart/detect.html
+++ b/monitor-chart/detect.html
@@ -144,9 +144,10 @@ window.onload=function(){
       });
   });
 
-  alert('123123123');
   if (typeof YYM == 'underfined') {
      alert('underfined');
+  } else {
+    alert('2222222');
   }
   try {
         var tmp = JSON.parse(YYM.getToken())
