--- a/monitor-chart/detect.html
+++ b/monitor-chart/detect.html
@@ -147,7 +147,7 @@ window.onload=function(){
   if (typeof YYM == 'underfined') {
      alert('underfined');
   } else {
-    alert('2222222');
+     alert(YYM);
   }
   try {
         var tmp = JSON.parse(YYM.getToken())
