--- a/monitor/bind-after.html
+++ b/monitor/bind-after.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>监测</title>
+<title>监测-绑定后</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta content="telephone=no" name="format-detection" />
 <link rel="stylesheet" type="text/css" href="../css/base.css" />
@@ -11,13 +11,13 @@
 <body ontouchstart="">
 <section id="container" class="viewport jc_box">
   <header class="jc_top">
-    <p class="jrdt_t" onclick="location='/monitor/monitor-chart/monitor.html'">今日动态</p>
+    <p class="jrdt_t">今日动态</p>
     <p class="zxys"><a href="#">咨询医生</a></p>
     <div class="yydt">
       <div class="yydt_in">
         <img src="../images/yImg.jpg" alt="" class="yydt_img"/>
         <p class="yydt_ttx">萌第3颗上乳中切牙</p>
-        <p class="yydt_t2">未绑定震动仪</p>
+        <p class="yydt_t2">实际记录2天</p>
       </div>
     </div>
   </header>
@@ -25,8 +25,8 @@
     <div class="mcjcrw">
       <canvas id="canvas" width="66" height="66">您的浏览器不支持canvas！</canvas>
       <p class="mc_t1">每次监测任务</p>
-      <p class="mc_t2">此动能在绑定设备后开放，敬请期待~</p>
-      <p class="mc_sjbq">数据不全</p>
+      <p class="mc_t2">今日监测1小时30分钟，震动次数50次</p>
+      <p class="mc_sjbq"></p>
     </div>
     <p class="mc_jl">坚持记录，保障牙齿健康</p>
   </section>
@@ -66,7 +66,7 @@ window.onload = function(){
     ctx.fillText(text,W/2 - text_w/2,H/2);
   }
   function draw(){
-    var percent=0;
+    var percent=.3;
     new_deg = Math.round(percent*360*1000)/1000;
     dif = new_deg-deg;
     loop = setInterval(to,1000/dif);
