--- a/monitor/history.html
+++ b/monitor/history.html
@@ -10,7 +10,7 @@
 </head>
 <body ontouchstart="" class="bg_gray">
 <section id="container" class="viewport">
-  <header class="jr_top"><em></em>记录历史</header>
+  <header class="jr_top"><em onclick="location='/monitor/monitor-chart/monitor.html'"></em>记录历史</header>
   <div class="jr_item">
     <div class="bzjl">
       <span></span>
