--- a/monitor/index.html
+++ b/monitor/index.html
@@ -7,17 +7,46 @@
 <meta content="telephone=no" name="format-detection" />
 <link rel="stylesheet" type="text/css" href="../css/base.css" />
 <link rel="stylesheet" type="text/css" href="../css/demo.css" />
+<style>
+.boosIc_c {
+    width: .59rem;
+    height: .59rem;
+    margin: 0 auto .16rem auto;
+    background-position: -1.93rem -4.4rem;
+}
+.boosIc_c img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+.boosIc_c img.boos_fade {
+    -webkit-animation: scaleout 1.3s infinite ease-in-out;
+    animation: scaleout 1.3s infinite ease-in-out;
+}
+.jrdt_t i {
+    content: "";
+    display: block;
+    width: .39rem;
+    height: .39rem;
+    background-position: 0 0;
+    position: absolute;
+    left: .39rem;
+    top: .1rem;
+    z-index: 2;
+}
+</style>
 </head>
 <body ontouchstart="">
 <section id="container" class="viewport jc_box">
   <header class="jc_top">
-    <p class="jrdt_t" onclick="location='/monitor/monitor-chart/monitor.html'">今日动态</p>
+    <p class="jrdt_t"><i onclick="location='/monitor/monitor-chart/monitor.html'"></i>今日动态</p>
     <p class="zxys"><a href="#">咨询医生</a></p>
     <div class="yydt" id="connect">
       <div class="yydt_in">
         <img src="../images/yImg.jpg" alt="" class="yydt_img"/>
         <p class="yydt_ttx">萌第3颗上乳中切牙</p>
-        <p class="yydt_t2" id="yydt_t2">未绑定震动仪</p>
+        <div class="boosIc_c"><img src="../images/lyIc.png" alt=""  id="yydt_t2" class="boos_fade" /></div>
+        <p class="yydt_t2">未绑定震动仪</p>
       </div>
     </div>
   </header>
@@ -31,7 +60,7 @@
     <p class="mc_jl">坚持记录，保障牙齿健康</p>
   </section>
 </section>
-<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script> 
+<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="../js/rem_750_100_min.js" type="text/javascript" charset="utf-8"></script>
 <script src="../js/jquery_last.js"></script>
 <script src="../js/monitor.js"></script>
@@ -44,7 +73,7 @@ window.onload = function(){
   var deg=0,new_deg=0,dif=0;
   var loop,re_loop;
   var text,text_w;
-  
+
   function init(){
     ctx.clearRect(0,0,W,H);
     ctx.beginPath();
@@ -52,14 +81,14 @@ window.onload = function(){
     ctx.lineWidth=3;
     ctx.arc(W/2,H/2,26,0,Math.PI*2,false);
     ctx.stroke();
-    
+
     var r = deg*Math.PI/180;
     ctx.beginPath();
     ctx.strokeStyle = "#5fc7bb";
     ctx.lineWidth=3;
     ctx.arc(W/2,H/2,26,0-40*Math.PI/180,r-40*Math.PI/180,false);
     ctx.stroke();
-    
+
     ctx.fillStyle="#888";
     ctx.font="14px '微软雅黑'";
     ctx.textBaseline="middle";
