--- a/monitor/index.html
+++ b/monitor/index.html
@@ -45,8 +45,8 @@
       <div class="yydt_in">
         <img src="../images/yImg.jpg" alt="" class="yydt_img"/>
         <p class="yydt_ttx">萌第3颗上乳中切牙</p>
-        <div class="boosIc_c"><img src="../images/lyIc.png" alt=""  id="yydt_t2" class="boos_fade" /></div>
-        <p class="yydt_t2">未绑定震动仪</p>
+        <div class="boosIc_c"><img src="../images/lyIc.png" alt=""  class="boos_fade" /></div>
+        <p class="yydt_t2" id="yydt_t2" >未绑定震动仪</p>
       </div>
     </div>
   </header>
