--- a/monitor/index.html
+++ b/monitor/index.html
@@ -5,39 +5,11 @@
 <title>监测</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta content="telephone=no" name="format-detection" />
-<link rel="stylesheet" type="text/css" href="../css/base.css" />
 <link rel="stylesheet" type="text/css" href="../css/demo.css" />
-<style>
-.boosIc_c {
-    width: .59rem;
-    height: .59rem;
-    margin: 0 auto .16rem auto;
-    background-position: -1.93rem -4.4rem;
-}
-.boosIc_c img {
-    width: 100%;
-    height: 100%;
-    display: block;
-}
-.boosIc_c img.boos_fade {
-    -webkit-animation: scaleout 1.3s infinite ease-in-out;
-    animation: scaleout 1.3s infinite ease-in-out;
-}
-.jrdt_t i {
-    content: "";
-    display: block;
-    width: .39rem;
-    height: .39rem;
-    background-position: 0 0;
-    position: absolute;
-    left: .39rem;
-    top: .1rem;
-    z-index: 2;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="../css/base.css" />
 </head>
 <body ontouchstart="">
-<section id="container" class="viewport jc_box">
+<section id="container" class="viewport jc_box bg2">
   <header class="jc_top">
     <p class="jrdt_t"><i onclick="location='/monitor/monitor-chart/monitor.html'"></i>今日动态</p>
     <p class="zxys"><a href="#">咨询医生</a></p>
