--- a/monitor-chart/monitor.html
+++ b/monitor-chart/monitor.html
@@ -123,7 +123,7 @@
 
             function getInstantData(){
                 var jsonData = YYM.getInstantData();
-                var obj = eval(jsonData);
+                var obj = new Function("return" + jsonData)();
                 return obj.temperature;
             }
         </script>
