--- a/monitor/index.html
+++ b/monitor/index.html
@@ -5,8 +5,8 @@
 <title>监测</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta content="telephone=no" name="format-detection" />
-<link rel="stylesheet" type="text/css" href="../css/demo.css" />
-<link rel="stylesheet" type="text/css" href="../css/base.css" />
+<link rel="stylesheet" type="text/css" href="../css/base.css?version=20161225" />
+<link rel="stylesheet" type="text/css" href="../css/demo.css?version=20161225" />
 </head>
 <body ontouchstart="">
 <section id="container" class="viewport jc_box bg2">
