--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -5,8 +5,8 @@
 <title>日历信息</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta content="telephone=no" name="format-detection" />
-<link rel="stylesheet" type="text/css" href="../css/base.css" />
-<link rel="stylesheet" type="text/css" href="../css/demo.css" />
+<link rel="stylesheet" type="text/css" href="../css/base.css?version=20161226" />
+<link rel="stylesheet" type="text/css" href="../css/demo.css?version=20161226" />
 <link href="../css/jquery.datetimepicker.css" rel="stylesheet"/>
 <style>html,body{height: 100%;}</style>
 </head>
@@ -15,10 +15,10 @@
   <input type="text" id="datetimepicker3"/>
   <div class="cale_btm"><p></p></div>
 </section>
-<script src="../js/jquery_last.js" type="text/javascript" charset="utf-8"></script> 
-<script src="../js/rem_750_100_min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../js/echarts.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../js/jquery.datetimepicker.js"></script>
+<script src="../js/jquery_last.js?version=20161226" type="text/javascript" charset="utf-8"></script>
+<script src="../js/rem_750_100_min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
+<script src="../js/echarts.min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
+<script src="../js/jquery.datetimepicker.js?version=20161226"></script>
 <script>
 $('#datetimepicker3').datetimepicker({
   inline:true
