--- a/doctors/list.html
+++ b/doctors/list.html
@@ -5,8 +5,8 @@
 <title>医生列表</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta content="telephone=no" name="format-detection" />
-<link rel="stylesheet" type="text/css" href="../css/base.css" />
-<link rel="stylesheet" type="text/css" href="../css/demo.css" />
+<link rel="stylesheet" type="text/css" href="../css/base.css?version=20161226" />
+<link rel="stylesheet" type="text/css" href="../css/demo.css?version=20161226" />
 </head>
 <body ontouchstart="" class="bg_gray">
 <section id="container" class="viewport">
@@ -17,10 +17,11 @@
   </div>
   <section>
     <div class="doc_top">
-      <div>所在地区</div>  
-      <div>擅长领域</div>  
-      <div><img src="../images/pxIc.png" width="12" alt="">排序</div>  
+      <div>所在地区</div>
+      <div>擅长领域</div>
+      <div><img src="../images/pxIc.png" width="12" alt="">排序</div>
     </div>
+    <a href="/monitor/doctors/doctors.html">
     <div class="doc_itemC">
       <div class="doc_item">
         <div class="doc_itemL">
@@ -43,6 +44,7 @@
         </div>
       </div>
     </div>
+  </a>
     <div class="doc_itemC">
       <div class="doc_item">
         <div class="doc_itemL">
@@ -67,9 +69,9 @@
     </div>
   </section>
 </section>
-<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script> 
-<script src="../js/rem_750_100_min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../js/echarts.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/zepto.min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
+<script src="../js/rem_750_100_min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
+<script src="../js/echarts.min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
 window.onload=function(){
 
