--- a/doctors/doctors.html
+++ b/doctors/doctors.html
@@ -5,13 +5,13 @@
 <title>预约医师</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta content="telephone=no" name="format-detection" />
-<link rel="stylesheet" type="text/css" href="../css/base.css" />
-<link rel="stylesheet" type="text/css" href="../css/demo.css" />
+<link rel="stylesheet" type="text/css" href="../css/base.css?version=20161226" />
+<link rel="stylesheet" type="text/css" href="../css/demo.css?version=20161226" />
 </head>
 <body ontouchstart="" class="bg_gray">
-<section id="container" class="viewport">
+<section id="container" class="viewport bg1">
   <header class="yyys_top">
-    <p class="yyys_tit"><em></em></p>
+    <p class="yyys_tit"><em onclick="location='/monitor/doctors/list.html'"></em></p>
     <div class="yy_docImg">
       <img src="../images/dotImg.jpg" alt=""/>
     </div>
@@ -55,12 +55,12 @@
     </div>
   </div>
   <div class="ljyy_box">
-    <a href="#" class="yy_link">立即预约</a>
+    <a href="/monitor/calendar/calendar.html" class="yy_link">立即预约</a>
     <a href="#" class="yy_gz">关注</a>
   </div>
 </section>
-<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script> 
-<script src="../js/rem_750_100_min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../js/echarts.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/zepto.min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
+<script src="../js/rem_750_100_min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
+<script src="../js/echarts.min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
