--- a/monitor/index.html
+++ b/monitor/index.html
@@ -5,14 +5,14 @@
 <title>监测</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta content="telephone=no" name="format-detection" />
-<link rel="stylesheet" type="text/css" href="../css/base.css?version=20161225" />
-<link rel="stylesheet" type="text/css" href="../css/demo.css?version=20161225" />
+<link rel="stylesheet" type="text/css" href="../css/base.css?version=20161226" />
+<link rel="stylesheet" type="text/css" href="../css/demo.css?version=20161226" />
 </head>
 <body ontouchstart="">
 <section id="container" class="viewport jc_box bg2">
   <header class="jc_top">
     <p class="jrdt_t"><i onclick="location='/monitor/monitor-chart/monitor.html'"></i>今日动态</p>
-    <p class="zxys"><a href="#">咨询医生</a></p>
+    <p class="zxys"><a href="/monitor/doctors/list.html">咨询医生</a></p>
     <div class="yydt" id="connect">
       <div class="yydt_in">
         <img src="../images/yImg.jpg" alt="" class="yydt_img"/>
@@ -32,10 +32,10 @@
     <p class="mc_jl">坚持记录，保障牙齿健康</p>
   </section>
 </section>
-<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../js/rem_750_100_min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../js/jquery_last.js"></script>
-<script src="../js/monitor.js"></script>
+<script src="../js/zepto.min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
+<script src="../js/rem_750_100_min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
+<script src="../js/jquery_last.js?version=20161226"></script>
+<script src="../js/monitor.js?version=20161226"></script>
 <script type="text/javascript">
 window.onload = function(){
   var canvas = document.getElementById("canvas");
