--- a/monitor-chart/monitor.html
+++ b/monitor-chart/monitor.html
@@ -28,7 +28,7 @@
                         <p class="jcTT">解读曲线</p>
                         <p>公立医院医生快速解答</p>
                     </div>
-                    <div>
+                    <div onclick="location='/monitor/doctors/list.html'">
                         <p class="jcTT">咨询医生</p>
                         <p>1元钱，名医任你挑选</p>
                     </div>
