--- a/monitor/history.html
+++ b/monitor/history.html
@@ -10,7 +10,7 @@
 </head>
 <body ontouchstart="" class="bg_gray">
 <section id="container" class="viewport">
-  <header class="jr_top"><em onclick="location='/monitor/monitor-chart/monitor.html'"></em>记录历史</header>
+  <header class="jr_top"><em onclick="location='/monitor/monitor/index.html'"></em>记录历史</header>
   <div class="jr_item">
     <div class="bzjl">
       <span></span>
@@ -96,7 +96,7 @@
     </div>
   </div>
 </section>
-<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script> 
+<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="../js/rem_750_100_min.js" type="text/javascript" charset="utf-8"></script>
 <script src="../js/echarts.min.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
