--- a/monitor/index.html
+++ b/monitor/index.html
@@ -23,7 +23,7 @@
     </div>
   </header>
   <section>
-    <div class="mcjcrw">
+    <div class="mcjcrw" onclick="location='/monitor/monitor/history.html'">
       <canvas id="canvas" width="66" height="66">您的浏览器不支持canvas！</canvas>
       <p class="mc_t1">每次监测任务</p>
       <p class="mc_t2">此动能在绑定设备后开放，敬请期待~</p>
