--- a/doctors/doctors.html
+++ b/doctors/doctors.html
@@ -62,5 +62,10 @@
 <script src="../js/zepto.min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
 <script src="../js/rem_750_100_min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
 <script src="../js/echarts.min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript">
+window.onload=function(){
+   YYM.hiddenTabBar();
+}
+</script>
 </body>
 </html>
