--- a/monitor-chart/monitor.html
+++ b/monitor-chart/monitor.html
@@ -126,6 +126,9 @@
                 var obj = new Function("return" + jsonData)();
                 return obj.temperature;
             }
+            window.onload=function(){
+               YYM.hiddenTabBar();
+            }
         </script>
     </body>
 </html>
