--- a/monitor/index.html
+++ b/monitor/index.html
@@ -89,6 +89,8 @@ window.onload = function(){
   $("#connect").on("click", function (){
        getConnectBlueDevice();
   })
+  //显示按钮
+  YYM.showTabBar();
 }
 
 function getConnectBlueDevice() {
