--- a/doctors/list.html
+++ b/doctors/list.html
@@ -74,7 +74,7 @@
 <script src="../js/echarts.min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
 window.onload=function(){
-
+   YYM.hiddenTabBar();
 }
 </script>
 </body>
