--- a/doctors/list.html
+++ b/doctors/list.html
@@ -10,7 +10,7 @@
 </head>
 <body ontouchstart="" class="bg_gray">
 <section id="container" class="viewport">
-  <header class="jr_top"><em onclick="location='/monitor/monitor-chart/monitor.html'"></em>名医咨询</header>
+  <header class="jr_top"><em onclick="location='/monitor/monitor/index.html'"></em>名医咨询</header>
   <a href="#" class="doc_banner"><img src="../images/banner.jpg" alt=""/></a>
   <div class="doc_search">
     <div><input type="text" placeholder="搜索医生名，医院" /></div>
