--- a/monitor-chart/monitor.html
+++ b/monitor-chart/monitor.html
@@ -5,8 +5,8 @@
         <title>监测数据图</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <meta content="telephone=no" name="format-detection" />
-        <link rel="stylesheet" type="text/css" href="../css/base.css" />
-        <link rel="stylesheet" type="text/css" href="../css/demo.css" />
+        <link rel="stylesheet" type="text/css" href="../css/base.css?version=20161226" />
+        <link rel="stylesheet" type="text/css" href="../css/demo.css?version=20161226" />
     </head>
     <body ontouchstart="" class="bg_gray">
         <section id="container" class="viewport">
