--- a/monitor/index.html
+++ b/monitor/index.html
@@ -12,7 +12,7 @@
 <section id="container" class="viewport jc_box bg2">
   <header class="jc_top">
     <p class="jrdt_t"><i onclick="location='/monitor/monitor-chart/monitor.html'"></i>今日动态</p>
-    <p class="zxys"><a href="/monitor/doctors/list.html">咨询医生</a></p>
+    <p class="zxys"><a href="/doctors/list.html">咨询医生</a></p>
     <div class="yydt" id="connect">
       <div class="yydt_in">
         <img src="../images/yImg.jpg" alt="" class="yydt_img"/>
@@ -31,6 +31,12 @@
     </div>
     <p class="mc_jl">坚持记录，保障牙齿健康</p>
   </section>
+  <footer class="btm_nav">
+    <a href="/monitor/index.html" class="m1 cur">首页</a>
+    <a href="/monitor-chart/index.html" class="m2">易牙美</a>
+    <a href="#" class="m3">日历</a>
+    <a href="#" class="m4">我的</a>
+  </footer>
 </section>
 <script src="../js/zepto.min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
 <script src="../js/rem_750_100_min.js?version=20161226" type="text/javascript" charset="utf-8"></script>
