新增token判断是否弹出login

--- a/monitor-chart/monitor.html
+++ b/monitor-chart/monitor.html
@@ -35,6 +35,12 @@
                 </div>
             </div>
         </section>
+        <footer class="btm_nav">
+            <a href="/monitor/monitor/index.html" class="m1">首页</a>
+            <a href="/monitor/monitor-chart/monitor.html" class="m2 cur">易牙美</a>
+            <a href="#" class="m3">日历</a>
+            <a href="#" class="m4">我的</a>
+        </footer>
         <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/rem_750_100_min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/echarts.min.js" type="text/javascript" charset="utf-8"></script>
