--- a/monitor/index.html
+++ b/monitor/index.html
@@ -11,8 +11,8 @@
 <body ontouchstart="">
 <section id="container" class="viewport jc_box bg2">
   <header class="jc_top">
-    <p class="jrdt_t"><i onclick="location='/monitor/monitor-chart/monitor.html'"></i>今日动态</p>
-    <p class="zxys"><a href="/doctors/list.html">咨询医生</a></p>
+    <p class="jrdt_t"><i onclick="todayMonitor()"></i>今日动态</p>
+    <p class="zxys"><a href="javascript:askDoctor()">咨询医生</a></p>
     <div class="yydt" id="connect">
       <div class="yydt_in">
         <img src="../images/yImg.jpg" alt="" class="yydt_img"/>
@@ -32,8 +32,8 @@
     <p class="mc_jl">坚持记录，保障牙齿健康</p>
   </section>
   <footer class="btm_nav">
-    <a href="/monitor/monitor-chart/bind-after.html" style="z-index: 30" class="m1 cur">首页</a>
-    <a href="/monitor/monitor-chart/monitor.html" class="m2">易牙美</a>
+    <a href="javascript:shouYe()" style="z-index: 30" class="m1 cur">首页</a>
+    <a href="javascript:yiYaMei()" class="m2">易牙美</a>
     <a href="#" class="m3">日历</a>
     <a href="#" class="m4">我的</a>
   </footer>
@@ -42,6 +42,7 @@
 <script src="../js/rem_750_100_min.js?version=20170101" type="text/javascript" charset="utf-8"></script>
 <script src="../js/jquery_last.js?version=20170101"></script>
 <script src="../js/monitor.js?version=20170101"></script>
+<script src="../js/config.js?version=20170101"></script>
 <script type="text/javascript">
 window.onload = function(){
   var canvas = document.getElementById("canvas");
