新增token判断是否弹出login

--- a/monitor-chart/monitor.html
+++ b/monitor-chart/monitor.html
@@ -37,7 +37,7 @@
         </section>
         <footer class="btm_nav">
             <a href="javascript:shouYe()" class="m1">首页</a>
-            <a href="javascript:yiyYaei()" class="m2 cur">易牙美</a>
+            <a href="javascript:yiYaMei()" class="m2 cur">易牙美</a>
             <a href="#" class="m3">日历</a>
             <a href="#" class="m4">我的</a>
         </footer>
